# internal/adapter/driver/api/controller/find_customer_by_cpf_controller.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"net/http"
 
+	"github.com/caiojorge/fiap-challenge-ddd/internal/adapter/driver/api/dto"
 	portsusecase "github.com/caiojorge/fiap-challenge-ddd/internal/core/application/ports/usecase"
 	"github.com/gin-gonic/gin"
 )
@@ -20,6 +21,15 @@ func NewFindCustomerByCPFController(ctx context.Context, usecase portsusecase.Fi
 	}
 }
 
+// @Summary Get a customer
+// @Description Get details of a customer by cpf
+// @Tags Customers
+// @Accept  json
+// @Produce  json
+// @Param cpf path int true "Customer cpf"
+// @Success 200 {object} dto.CustomerDTO
+// @Failure 404 {object} map[string]string "Customer not found"
+// @Router /customers/{cpf} [get]
 func (cr *FindCustomerByCPFController) GetCustomerByCPF(c *gin.Context) {
 	//cpf, ok := c.GetQuery("cpf")
 	cpf := c.Param("cpf")
@@ -35,5 +45,12 @@ func (cr *FindCustomerByCPFController) GetCustomerByCPF(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, customer)
+	dto := dto.CustomerDTO{}
+	if customer == nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "Customer not found"})
+		return
+	}
+
+	dto.FromEntity(*customer)
+	c.JSON(http.StatusOK, dto)
 }
